--- a/res/layout/activity_fight.xml
+++ b/res/layout/activity_fight.xml
@@ -2,15 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity" >
+    tools:context=".FightActivity" >
 
-    <Button
-        android:id="@+id/btStart"
+    <TextView
+        android:id="@+id/textViewHP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:onClick="startSurvival"
-        android:text="Start Survival!" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="HP" />
 
 </RelativeLayout>
