--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/zombies"
     tools:context=".MainActivity" >
 
     <Button
@@ -11,6 +12,6 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:onClick="startSurvival"
-        android:text="Start Survival!" />
+        android:text="@string/start_survival_string" />
 
 </RelativeLayout>
