--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -12,6 +12,7 @@
         android:layout_height="0dp"
         android:layout_gravity="top|fill_horizontal"
         android:layout_weight="1"
+        android:background="@drawable/dead_city"
         android:fadingEdge="horizontal"
         android:orientation="vertical" >
 
